--- a/src/Title.css
+++ b/src/Title.css
@@ -10,7 +10,9 @@
 
 .title-pic{
   display: block;
-  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
   height: 520px;
   margin-bottom: 2em;
   padding-left: 1em;
